--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -6,6 +6,172 @@ PART
 
 	RSSROConfig = true
 
+	//	================================================================================
+	//Source for all Mercury Masses: http://www.alternatewars.com/BBOW/Space/JSC-26098_Design_Mass_Properties_II.pdf
+	//	================================================================================
+	//Mercury Reentry Module dry mass breakdown:
+	//	================================================================================
+	//Airbrake: 18 lbs
+	//	Other: 18 lbs
+	//	================================================================================
+	//CM: 1488 lbs
+	//	Structure: 269 lbs
+	//		Pressurized Body: 71 lbs
+	//		Large Bulkhead: 47 lbs
+	//		Small Bulkhead: 16 lbs
+	//		Hatch: 16 lbs
+	//		Windows and Frame: 30 lbs
+	//		Special Rings: 35 lbs
+	//		Shear Webs: 28 lbs
+	//		Doors: 15 lbs
+	//		Miscl: 11 lbs
+	//	TPS: 126 lbs
+	//		Heat Prot Shingles: 114 lbs
+	//		Insulation: 12 lbs (dividing this up so HS mass agrees with autoconfig mass)
+	//	Propulsion: 100 lbs
+	//		RCS Controllers: 12 lbs
+	//		RCS Pressurization Sys: 17 lbs
+	//		RCS Propellant Sys: 43 lbs
+	//		Retro Wiring: 28 lbs
+	//	Power: 320 lbs
+	//		Primary Batt: 152 lbs
+	//		Squib Batt: 50 lbs
+	//		Miscl Batt: 10 lbs
+	//		DC Power Sys: 14 lbs
+	//		AC Power Sys: 30 lbs
+	//		Wiring: 46 lbs
+	//		Miscl: 6 lbs
+	//		Mounting: 12 lbs
+	//	Avionics: 315 lbs
+	//		Communications: 113 lbs
+	//		Instrumentation: 121 lbs
+	//		Attitude Contr Sys: 81 lbs
+	//	Enviromental: 337 lbs
+	//		Environmental Contr Sys: 123 lbs (127 lbs - 4 lbs/1.81 kg LiOH)
+	//		Panels, Misc: 66 lbs
+	//		Seat: 54 lbs
+	//		Seat Instl: 16 lbs
+	//		Manual Contr: 26 lbs
+	//		Interior Lights: 4 lbs
+	//		Displays: 48 lbs
+	//	Other: 21 lbs
+	//		Chute, Impact Sys Wir: 21 lbs
+	//	================================================================================
+	//HS: 531 lbs
+	//	(Autoconfig tool assigns 197 lbs ablator, 157 lbs struct, for 354 lbs total)
+	//	TPS: 354 lbs
+	//		Insulation: 46 lbs (dividing this up so HS mass agrees with autoconfig mass)
+	//		HS: 308 lbs
+	//	Other: 177 lbs
+	//		Impact Sys: 136 lbs
+	//		Ballast: 41 lbs
+	//	================================================================================
+	//Nose Cap: 72 lbs
+	//	Structure: 72 lbs
+	//		Nose Antenna Struct: 37 lbs
+	//		Antenna: 27 lbs
+	//		Antenna Misc: 8 lbs
+	//	================================================================================
+	//RCS: 280 lbs
+	//	Structure: 36 lbs
+	//		Parachute Struct: 36 lbs
+	//	Propulsion: 52 lbs
+	//		RCS Thrusters: 21 lbs
+	//		RCS Mounting: 11 lbs
+	//		RCS Insulation: 10 lbs
+	//		RCS Heat Sink: 10 lbs
+	//	Other: 192 lbs
+	//		Chutes: 157 lbs
+	//		Recovery Sys: 35 lbs
+	//	================================================================================
+	//TOTAL DRY MASS: 2389 lbs (2393 - 4 lbs LiOH)
+	//	Structure: 377 lbs
+	//	TPS: 480 lbs
+	//	Propulsion: 152 lbs
+	//	Power: 320 lbs
+	//	Avionics: 315 lbs
+	//	Enviromental: 337 lbs (341 lbs - 4 lbs LiOH)
+	//	Other: 408 lbs
+
+	//	================================================================================
+	//Mercury Reentry Module Inert Mass Breakdowns
+	//	================================================================================
+	//CM: 40 lbs (+ 204 lbs astronaut+suit)
+	//	RCS Peroxide Residuals: 5 lbs
+	//	Crew: 180 lbs (not incl.)
+	//	Suit: 24 lbs (not incl.)
+	//	Survival Kit: 34 lbs
+	//	Ballast: 1 lbs
+	//INERT MASS: 40 lbs
+
+	//TOTAL INERT MASS: 2429 lbs (not incl. astronaut and 4 lbs LiOH, 2637 with)
+
+	//	================================================================================
+	//Mercury Reentry Module Wet Mass Breakdowns
+	//	================================================================================
+	//CM: 90.5 lbs
+	//	CM Propellant: 55.5 lbs (25.17 kg)
+	//		RCS Press (Helium): 0.5 lbs (0.227 kg)
+	//		RCS Peroxide Usable: 55 lbs (24.95 kg)
+	//	CM LS: 35 lbs (15.88 kg)
+	//		Water (Cooling): 15 lbs (6.80 kg)
+	//		Oxygen (Crew): 8 lbs (3.63 kg)
+	//		Water (Crew): 8 lbs (3.63 kg)
+	//		LiOH: 4 lbs (1.81 kg)
+	//WET MASS: 90.5 lbs
+
+	//TOTAL GROSS MASS: 2519.5 lbs (not incl. astronaut, 2723.5 lbs with)
+
+	//	================================================================================
+	//Kerbonaut weight: 220 lbs (close enough)
+	//	================================================================================
+
+	//	================================================================================
+	//Ultimate Part Mass Assignments:
+	//	================================================================================
+	//	Airbrake: 18 lbs (8.165 kg)
+	//		Dry Mass: 18 lbs
+	//	================================================================================
+	//	CM: 1528 lbs (693.10 kg)
+	//		Dry Mass: 1492 lbs
+	//		Inert Mass: 40 lbs
+	//	================================================================================
+	//	HS: 531 lbs (240.86 kg)
+	//		Dry Mass: 531 lbs
+	//	================================================================================
+	//	Nose Cap: 72 lbs (32.66 kg)
+	//		Dry Mass: 72 lbs
+	//	================================================================================
+	//	RCS: 280 lbs (127.01 kg)
+	//		Dry Mass: 280 lbs
+	//	================================================================================
+	//INERT MASS: 2429 lbs (1101.78 kg)
+
+	//	================================================================================
+	//Ultimate Part Resource Assignments:
+	//	================================================================================
+	//CM:
+	//	CM Propellant: 23.795 L
+	//		Helium: 1265 L (/200)
+	//		HTP: 17.44 L
+	//	CM LS: 24.543 L
+	//		Water (Cooling): 6.8 L	(This might become it's own resource one day)
+	//		Water (Crew): 3.63 L
+	//		Oxygen (Crew): 2574.5 L (/200)
+	//		LiOH: 1.24 L
+	//	CM EC: 48600 EC (1,000 EC/L)
+	//		EC: 48.6 L
+	//	CM Excess: 27.6 L (???)
+	//TOTAL TANK SIZE (NO LS): 100.0 L
+	//TOTAL TANK SIZE (W/ LS): 124.6 L
+
+	//	================================================================================
+	//Tank Mass Compensation
+	//	================================================================================
+	//	CM Propellant Tank (SM-II): 5.13 kg
+	//	CM LS Tank (SM-II): 8.09 kg
+	//	CM Batteries (SM-III): 87.48 kg
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_Capsule
@@ -43,7 +209,11 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = The first American spacecraft. Carrying a single astronaut, it can be launched suborbital on a Redstone or into orbit on Atlas LV3B.
 	attachRules = 1,0,1,1,0
-	mass = 0.6692
+	
+	mass = 0.61437	//693.10 kg - 5.13 kg (propellant tanks) - 87.48 kg (batteries) + 15.88 kg (LS resources) and 2 kg for trim (something adds 2 kg that I can't track down)
+	//Subtract mass of propellant tanks and battery from base mass
+	//Life support mass will be subtracted when LS resources are patched
+	
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -104,7 +274,7 @@ PART
 				speed = 1.0 1.0
 				localRotation = -90, 0, 0
 			}
-		}		
+		}
 	}
 
 	MODULE
@@ -233,30 +403,32 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		type = ServiceModule
-		volume = 127.6
-		basemass = -1
+		type = SM-II
+		volume = 100
+		basemass = 0.61437
 
 		TANK
 		{
 			name = ElectricCharge
+			mass = 0.0018 // Override to get roughly correct mass. Giving players SM-III level batteries isn't ideal, but it's better than the massless batteries it had before.
 			amount = 48600
 			maxAmount = 48600
 		}
 
 		TANK
 		{
-			name = HTP
-			amount = 18
-			maxAmount = 18
+			name = HTP		//55 lbs usable, 5 lbs unusable, 0.5 lbs helium pressurant
+			amount = 17.44
+			maxAmount = 17.44
 		}
 
 		TANK
 		{
 			name = Helium
-			amount = 190
-			maxAmount = 190
+			amount = 1265
+			maxAmount = 1265
 		}
+
 	}
 
 	//	============================================================================
@@ -434,53 +606,53 @@ PART
 		}
 	}
 }
-@PART[ROC-MercuryCM]:FOR[ROCapsules]:NEEDS[TacLifeSupport]
+
+//	================================================================================
+//	Tac Life Support configs
+//	================================================================================
+@PART[ROC-MercuryCMBDB]:FOR[ROCapsules]:NEEDS[TacLifeSupport]
 {
 	@description ^= :$: Supports a crew of one for up to maximum 35 hours of active operations but it will require you to change the resources.
+	@mass -= 0.02397	//Subtract 8.09 kg for LS tanks, 15.88 kg for LS resources
 
 	@MODULE[ModuleFuelTanks]
 	{
-
-		TANK
-		{
-			name = Food
-			amount = 0
-			maxAmount = 8.5302
-		}
+		@volume += 28.4		//Add 3.8 L for CO2 tank (does TAC even use that?)
+		@basemass -= 0.02397	//Subtract 8.09 kg for LS tanks, 15.88 kg for LS resources
 
 		TANK
 		{
 			name = Water
-			amount = 0
-			maxAmount = 5.6448
+			amount = 10.43
+			maxAmount = 10.43
 		}
 
 		TANK
 		{
 			name = Oxygen
-			amount = 0
-			maxAmount = 863.1
+			amount = 2574.5
+			maxAmount = 2574.5
 		}
 
 		TANK
 		{
 			name = LithiumHydroxide
-			amount = 1.05
-			maxAmount = 1.05
+			amount = 1.24
+			maxAmount = 1.24
 		}
 
 		TANK
 		{
 			name = WasteWater
 			amount = 0
-			maxAmount = 7.1820
+			maxAmount = 7.2
 		}
 
 		TANK
 		{
 			name = Waste
 			amount = 0
-			maxAmount = 5.7305
+			maxAmount = 5.7
 		}
 
 		TANK
@@ -543,8 +715,20 @@ PART
 //	================================================================================
 //	Final Pass to Make Sure TAC does not add extra resources
 //	================================================================================
-
 @PART[ROC-MercuryCMBDB]:BEFORE[zzzRealismOverhaul]
 {
 	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
+}
+
+//	================================================================================
+//	Offset RA antenna mass
+//	================================================================================
+@PART[ROC-MercuryCMBDB]:AFTER[RealAntennas]
+{
+	@mass -= 0.0203	//Subtract 20.3 kg for a 20 dbm TL 3 antenna
+	
+	@MODULE[ModuleFuelTanks]
+	{
+		@basemass -= 0.0203
+	}
 }
