--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryPosigrade.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryPosigrade.cfg
@@ -25,7 +25,7 @@ PART
 	manufacturer = Thiokol
 	description = This tiny solid rocket motor was originally used to push a Mercury away from its Atlas booster. We're sure you'll think of even more uses for it.
 	attachRules = 0,1,0,0,0
-	mass = 0.001
+	mass = 0.000508		//1.12 lbs
 	dragModelType = default
 	maximum_drag  = 0.20
 	minimum_drag = 0.15
@@ -70,7 +70,7 @@ PART
 
 		TANK
 		{
-			name = PSPC
+			name = PSPC		//~4.23 lbs propellant
 			amount = 1.103 
 			maxAmount =	 1.103
 		}
@@ -115,5 +115,5 @@ PART
 		fixedScale = 0.5
 		energy = 1
 		speed = 1
-	}	
+	}
 }
