--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
@@ -41,7 +41,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = This part contains four way RCS thrusters to help orient the Mercury capsule and the main parachute.
 	attachRules = 1,0,1,1,0
-	mass = 0.17
+	mass = 0.1104		//127.01 kg, subtract 16.61 kgs added by realchute?
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -126,7 +126,7 @@ PART
 	MODULE:NEEDS[RealChute]
 	{
 		name = RealChuteModule
-		caseMass = 0.07
+		caseMass = 0.1104
 		mustGoDown = True
 		spareChutes = 1
 		cutSpeed = 0.5
