--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryDecouplerAtlas.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryDecouplerAtlas.cfg
@@ -6,6 +6,10 @@ PART
 
 	RSSROConfig = true
 
+	//	================================================================================
+	//Source for all Mercury Masses: http://www.alternatewars.com/BBOW/Space/JSC-26098_Design_Mass_Properties_II.pdf
+	//	================================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_Interstage
@@ -30,7 +34,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = Interstage for separating the Mercury capsule from an Atlas rocket.
 	attachRules = 1,0,1,1,0
-	mass = 0.318
+	mass = 0.08618		//190 lbs
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
