--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
@@ -32,7 +32,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = This nose cap for the Mercury capsule includes the drogue chute and the main antenna. It has an attach node for a destabilizing flap. The latter might not accomplish much but its theorized to help self orient a reentering craft and its nice to have.
 	attachRules = 1,0,1,1,0
-	mass = 0.03
+	mass = 0.03158	//32.66 kg - 1.08 kg added by RealChute?
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
@@ -115,7 +115,7 @@ PART
 		minAirPressureToOpen = 0.01
 		clampMinAirPressure = 0.01
 		deployAltitude = 7000
-		deploymentSpeed = 0.125
+		deploymentSpeed = 2
 		semiDeploymentSpeed = 1 //0.125
 		chuteMaxTemp = 1600
 		machHeatMultBase = 0.25
@@ -125,7 +125,7 @@ PART
 	MODULE:NEEDS[RealChute]
 	{
 		name = RealChuteModule
-		caseMass = 0.03
+		caseMass = 0.03158
 		mustGoDown = True
 		spareChutes = 1
 		cutSpeed = 0.5
@@ -144,7 +144,7 @@ PART
 			preDeploymentSpeed = 2
 			minDeployment = 7000
 			deployedDiameter = 5
-			deploymentSpeed = 0.125
+			deploymentSpeed = 2
 			deploymentAlt = 7000
 			cutAlt = 0
 		}
@@ -228,6 +228,19 @@ PART
 		@name = ModuleRealAntenna
 		referenceGain = 2.0		//Estimated size, can't find any documentation
 	}
+}
+
+@PART[ROC-MercuryNoseCapBDB]:AFTER[RealAntennas]:NEEDS[RealAntennas&RealChute]
+{
+	@mass -= 0.0203		//subtract antenna mass because RA adds antenna mass.
+	@MODULE[RealChuteModule]
+	{
+		@caseMass -= 0.0203
+	}
+}
+@PART[ROC-MercuryNoseCapBDB]:AFTER[RealAntennas]:NEEDS[RealAntennas&!RealChute]
+{
+	@mass -= 0.0203		//Otherwise subtract mass whenever
 }
 
 @PART[ROC-MercuryNoseCapBDB]:AFTER[zzzRealismOverhaul]
