Apollo CSM configs
Add configs for the BDB Apollo CM and SM.

--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloHGA.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloHGA.cfg
@@ -34,7 +34,7 @@ PART
 	manufacturer = Dalmo Victor Co.
 	description = The primary High Gain Antenna of the Apollo Spacecraft. Attach to the bottom of the Service Module in the grooved node.
 	
-	mass = 0.043
+	mass = 0.0445
 	
 	category = Communication
 	subcategory = 0
@@ -138,18 +138,21 @@ PART
 //	================================================================================
 @PART[ROC-ApolloHGA]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
 {
+	//Subtract 44 kg for 28 dbm and 34 dbm TL 5 antennas
+	@mass -= 0.044
+
 	!MODULE[ModuleDataTransmitter],* {}
 
 	MODULE
 	{
 		name = ModuleRealAntenna
-		referenceGain = 3.0		//Omni based on steerable antenna in low gain mode
+		referenceGain = 3.0		//Omni based on steerable antenna in low gain mode. RF output 2.8 watts (~28 dbm)
 		RFBand = S		//Default to S-band
 	}
 	MODULE
 	{
 		name = ModuleRealAntenna
-		antennaDiameter = 1.8		//Antenna diameter based on combined area of 4 dishes
+		antennaDiameter = 1.8		//Antenna diameter based on combined area of 4 dishes. RF output 11.2 watts (~34 dbm)
 		RFBand = S		//Default to S-band
 	}
 }
