--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloRCS.cfg
@@ -25,16 +25,16 @@ PART
 	attachRules = 0,1,0,0,0
 	
 	bulkheadProfiles = srf
-		
+	
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
 	
-	title = Apollo Service Module RCS Block
-	manufacturer = Marquardt Corp.
-	description = The attitude control thruster blocks of the Apollo Service Module (SM). Four of these allow full three-axis attitude control and translation of the Apollo CSM.
+	title = #rocApolloRCSTitle	//Apollo Service Module RCS Block
+	manufacturer = #roMfrMarquardt	//Marquardt
+	description = #rocApolloRCSDesc	//The attitude control thruster blocks of the Apollo Service Module (SM). Four of these allow full three-axis attitude control and translation of the Apollo CSM.
 	
-	mass = 0.014
+	mass = 0.01429
 	
 	category = Control
 	subcategory = 0
@@ -74,17 +74,17 @@ PART
 		thrusterPower = 0.445
 		runningEffectName = running
 		
-		// MR 1.6:1 from ox/fuel masses
+		// MR 2.04:1 from ox/fuel masses
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.5073
+			ratio = 0.4464
 		}
 
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4927
+			ratio = 0.5536
 		}
 
 		PROPELLANT
