--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
@@ -655,7 +655,7 @@ PART
 	{
 		name = ModuleConnectedLivingSpace
 		passable = true
-		//impassablenodes = para, para2, bottom
+		impassablenodes = drogueChute_NODE, mainChute_NODE
 	}
 	
 	MODULE
