--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/TU_Support_ApolloBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/TU_Support_ApolloBDB.cfg
@@ -25,7 +25,7 @@
 		inheritTexture = _BumpMap
 		inheritTexture = _Emissive
 
-		texture = _MetallicGlossMap, BROCapsules/Assets/BDB/Apollo/TU/bluedog_Apollo_CM_TU
+		texture = _MetallicGlossMap, ROCapsules/Assets/BDB/Apollo/TU/bluedog_Apollo_CM_TU
 		texture = _AOMap, ROCapsules/Assets/BDB/Apollo/TU/bluedog_Apollo_CM_TU
 
 
@@ -56,7 +56,7 @@
 		PROPERTY
 		{
 			name = _Color
-			color = 1.1, 1.1, 1.1
+			color = 2.0, 2.0, 2.0
 		}
 		PROPERTY
 		{
@@ -84,6 +84,8 @@ KSP_MODEL_SHADER
 	//model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_Block2_highGain	//This breaks the mesh texture somehow
 	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_DockingSpotlight
 	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_EVAFloodlight
+	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_ProbeDockingPort
+	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_ConeDockingPort
 
 	MATERIAL
 	{
