--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloSPSBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloSPSBDB.cfg
@@ -1,7 +1,7 @@
 PART
 {
 	module = Part
-	name = ROE-ApolloSPSBDB
+	name = ROC-ApolloSPSBDB
 	author = DECQ, Pap
 
 	ROESetEngineDefaults = LIQUID_ENGINE
@@ -17,9 +17,10 @@ PART
 	}
 
 	scale = 1.0
-	rescaleFactor = 1.0
+	rescaleFactor = 1.5646
+
 	node_stack_top = 0.0, 0.6608, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -1.891, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_bottom = 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 2
 	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,0
 
