--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
@@ -785,121 +785,121 @@ PART
 		}
 	}
 	
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = textureSwitchPaint
-		switcherDescription = Paintjob
-		affectDragCubes = False
-		affectFARVoxels = False
-		SUBTYPE
-		{
-			name = Default
-			transform = colorswitch
-		}
-		SUBTYPE
-		{
-			name = Boilerplate
-			transform = colorswitch_bp
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/Paint/White/bluedog_Apollo_CM_White
-				transform = whiteMat
-			}
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/Paint/BP/bluedog_Apollo_CM_BP
-				transform = bpMat
-			}
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
-				isNormalMap = true
-				transform = whiteMat
-				transform = bpMat
-			}
-		}
-		SUBTYPE
-		{
-			name = Modern
-			transform = Painted
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/Paint/Modern/bluedog_Apollo_CM_Modern
-				transform = Painted
-			}
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/Paint/Modern/bluedog_Apollo_CM_Modern_NRM
-				isNormalMap = true
-				transform = Painted
-			}
-		}
-		SUBTYPE
-		{
-			name = Toasted
-			transform = Painted
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/Paint/Skylab/bluedog_Apollo_CM_Skylab
-				transform = Painted
-			}
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
-				isNormalMap = true
-				transform = Painted
-			}
-		}
-		SUBTYPE
-		{
-			name = Skylab (Toasted)
-			transform = colorswitch_skylab
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/Paint/Skylab/bluedog_Apollo_CM_Skylab
-				transform = skylabMat
-			}
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
-				isNormalMap = true
-				transform = skylabMat
-			}
-		}
-		SUBTYPE
-		{
-			name = White
-			transform = Painted
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/Paint/White/bluedog_Apollo_CM_White
-				transform = Painted
-			}
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
-				isNormalMap = true
-				transform = Painted
-			}
-		}
-		SUBTYPE
-		{
-			name = Skylab (Clean)
-			transform = colorswitch_skylab
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/Paint/White/bluedog_Apollo_CM_White
-				transform = skylabMat
-			}
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
-				isNormalMap = true
-				transform = skylabMat
-			}
-		}
-	}
+	// MODULE
+	// {
+		// name = ModuleB9PartSwitch
+		// moduleID = textureSwitchPaint
+		// switcherDescription = Paintjob
+		// affectDragCubes = False
+		// affectFARVoxels = False
+		// SUBTYPE
+		// {
+			// name = Default
+			// transform = colorswitch
+		// }
+		// SUBTYPE
+		// {
+			// name = Boilerplate
+			// transform = colorswitch_bp
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/Paint/White/bluedog_Apollo_CM_White
+				// transform = whiteMat
+			// }
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/Paint/BP/bluedog_Apollo_CM_BP
+				// transform = bpMat
+			// }
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
+				// isNormalMap = true
+				// transform = whiteMat
+				// transform = bpMat
+			// }
+		// }
+		// SUBTYPE
+		// {
+			// name = Modern
+			// transform = Painted
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/Paint/Modern/bluedog_Apollo_CM_Modern
+				// transform = Painted
+			// }
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/Paint/Modern/bluedog_Apollo_CM_Modern_NRM
+				// isNormalMap = true
+				// transform = Painted
+			// }
+		// }
+		// SUBTYPE
+		// {
+			// name = Toasted
+			// transform = Painted
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/Paint/Skylab/bluedog_Apollo_CM_Skylab
+				// transform = Painted
+			// }
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
+				// isNormalMap = true
+				// transform = Painted
+			// }
+		// }
+		// SUBTYPE
+		// {
+			// name = Skylab (Toasted)
+			// transform = colorswitch_skylab
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/Paint/Skylab/bluedog_Apollo_CM_Skylab
+				// transform = skylabMat
+			// }
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
+				// isNormalMap = true
+				// transform = skylabMat
+			// }
+		// }
+		// SUBTYPE
+		// {
+			// name = White
+			// transform = Painted
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/Paint/White/bluedog_Apollo_CM_White
+				// transform = Painted
+			// }
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
+				// isNormalMap = true
+				// transform = Painted
+			// }
+		// }
+		// SUBTYPE
+		// {
+			// name = Skylab (Clean)
+			// transform = colorswitch_skylab
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/Paint/White/bluedog_Apollo_CM_White
+				// transform = skylabMat
+			// }
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
+				// isNormalMap = true
+				// transform = skylabMat
+			// }
+		// }
+	// }
 	
 	MODULE
 	{
