--- a/GameData/ROCapsules/PartConfigs/APAS/APAS_Passive.cfg
+++ b/GameData/ROCapsules/PartConfigs/APAS/APAS_Passive.cfg
@@ -65,5 +65,11 @@ PART
 		undockEjectionForce = 0.1 // 10
 	}
 
-
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
 }
