--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2DockProbe.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2DockProbe.cfg
@@ -82,4 +82,12 @@ PART
 		minDistanceToReEngage = 0.25 // 1.0
 		undockEjectionForce = 0.1
 	}
+
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
 }
