--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Parachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Parachute.cfg
@@ -155,6 +155,14 @@ PART
 		maxAmount = 12
 		amount = 12
 	}
+
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
 }
 
 @PART[ROC-D2Parachute]:AFTER[zzzRealismOverhaul]
