--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism.cfg
@@ -81,6 +81,14 @@ PART
 		undockEjectionForce = 0.1 // 10
 	}
 
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
+
 	MODULE
 	{
 		name = ModuleAnimateGeneric
