--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
@@ -381,8 +381,10 @@ PART
 	MODULE:NEEDS[ConnectedLivingSpace]
 	{
 		name = ModuleConnectedLivingSpace
-		passable = true
-		impassablenodes = para, para2, bottom
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+		impassablenodes = para, para2
 	}
 	
 	MODULE
