--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueDockPort.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueDockPort.cfg
@@ -93,6 +93,8 @@ PART
 	{
 		name = ModuleConnectedLivingSpace
 		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
 	}
 
 	MODULE
