--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS.cfg
@@ -122,6 +122,8 @@ PART
 	{
 		name = ModuleConnectedLivingSpace
 		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
 	}
 	
 	//	============================================================================
