--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaAftBayMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaAftBayMoroz.cfg
@@ -22,6 +22,7 @@ PART
 	cost = 1
 	category = Structural
 	subcategory = 0
+	CrewCapacity = 1
 	title = Dynasoar Aft Bay
 	manufacturer = Boeing
 	description = The aft bay and adapter for Dynasoar, containing liquid hydrogen and liquid oxygen for the fuel cells, space for extra supplies and equipment, and a crew tube. Rated for high altitude hypersonic flight, but decouple before reentry.
@@ -67,6 +68,14 @@ PART
 		crossfeedStatus = true
 		toggleEditor = true
 		toggleFlight = true
+	}
+	
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
 	}
 	
 	MODULE
