--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCockpitMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCockpitMoroz.cfg
@@ -99,6 +99,14 @@ PART
 		}
 	}
 
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
+
 	//Nothing mentions a HTP tank in the nose, but there's a lot of empty space there
 	//And something is needed to balance out rear HTP tanks to keep CoM shift less than 0.9%
 	MODULE
