--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCrewTubeMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCrewTubeMoroz.cfg
@@ -42,6 +42,14 @@ PART
 	bulkheadProfiles = mk2
 	tags = X20 x-20 dynasoar crew docking aircraft dynamic soarer
 	
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
+	
 	MODULE
 	{
 		name = ModulePartVariants
