--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiDockingAdapter.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiDockingAdapter.cfg
@@ -38,4 +38,11 @@ PART
 	bulkheadProfiles = size1p2, size1p5
 	tags = MOL MOS Gemini leo docking adapter structural ferry
 
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
 }
