--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiMOLPort.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiMOLPort.cfg
@@ -70,4 +70,11 @@ PART
 		allowAnimationWhileShielded = False
 	}
 
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
 }
