--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiSM.cfg
@@ -47,6 +47,14 @@ PART
 		name = crewCabinInternals
 	}
 
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
+
 	MODULE
 	{
 		name = ModuleFuelTanks
