--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiB/GeminiBEquipmentSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiB/GeminiBEquipmentSection.cfg
@@ -112,6 +112,14 @@ PART
 		}
 	}
 	
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
+	
 	RESOURCE
 	{
 		name = PSPC
