--- a/GameData/ROCapsules/PartConfigs/Orion/OrionForwardHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionForwardHS.cfg
@@ -98,6 +98,14 @@ PART
 		explosiveNodeID = bottom
 	}
 
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
+
 	MODULE
 	{
 		name = ModuleDragModifier
