--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodAirlock.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodAirlock.cfg
@@ -23,9 +23,12 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
+	//node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
+	//node_stack_top = 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 1
+	//Convert to surface attach, otherwise CLS doesn't work.
+	node_attach = 0.0, 0.0, 0.15, 0.0, -0.4, 1.0, 1
 
-	attachRules = 1,0,1,1,0
+	attachRules = 1,1,1,1,0
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
@@ -156,7 +159,9 @@ PART
 	MODULE:NEEDS[ConnectedLivingSpace]
 	{
 		name = ModuleConnectedLivingSpace
-		passable = true
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
 	}
 }
 
