--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
@@ -128,7 +128,9 @@ PART
 	{
 		name = ModuleConnectedLivingSpace
 		passable = true
-		impassablenodes = bottom
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+		impassablenodes = bottom, top, para
 	}
 
 	MODULE:NEEDS[RasterPropMonitor]
