--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -97,6 +97,12 @@ PART
 		storageRange = 3.0
 	}
 
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = false
+	}
+
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -126,7 +132,7 @@ PART
 	{
 		name = ModuleConnectedLivingSpace
 		passable = true
-		impassablenodes = bottom
+		impassablenodes = bottom, para
 	}
 
 	MODULE:NEEDS[RasterPropMonitor]
