--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule1.cfg
@@ -92,6 +92,14 @@ PART
 		useMultipleDragCubes = false
 	}
 
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
+
 	MODULE
 	{
 		name = ModuleFuelTanks
