--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiDecoupler.cfg
@@ -73,4 +73,12 @@ PART
 		actionGUIName = Toggle Umbilicals
 		allowAnimationWhileShielded = True
 	}
+
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = True
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
 }
