(un)fix kerbalism airlock
After some investigation, the CLS issue has been traced down to an improperly configured Kerbalism Habitat. Reverting my fix.

--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodAirlock.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodAirlock.cfg
@@ -23,10 +23,8 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	//node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
-	//node_stack_top = 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 1
-	//Convert to surface attach, otherwise CLS doesn't work.
-	node_attach = 0.0, 0.0, 0.15, 0.0, -0.4, 1.0, 1
+	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
+	//node_attach = 0.0, 0.0, 0.15, 0.0, -0.4, 1.0, 1
 
 	attachRules = 1,1,1,1,0
 
@@ -71,7 +69,8 @@ PART
 	//	Modules and Resources
 	//	============================================================================
 
-	MODULE
+	//Kerbalism will control the animation itself if present (assuming someone fixed the config)
+	MODULE:NEEDS[!Kerbalism]
 	{
 		name = ModuleAnimateGeneric
 		animationName = Deploy
