Preliminary LM configs

--- a/GameData/ROCapsules/Localization/en-us.cfg
+++ b/GameData/ROCapsules/Localization/en-us.cfg
@@ -13,6 +13,7 @@ Localization
 		//		ROC-ApolloRCS
 		#rocApolloRCSTitle = Apollo Service Module RCS Block
 		#rocApolloRCSDesc = The attitude control thruster blocks of the Apollo Service Module (SM). Four of these allow full three-axis attitude control and translation of the Apollo CSM.
+
 		//	============================================================================
 		//	BDB Apollo Block 1/2
 		//	============================================================================
@@ -37,8 +38,8 @@ Localization
 		#rocApolloDrogueParachuteBDBDesc = The drogue parachute pack is meant to slow down the Apollo spacecraft at a high altitude in preparation for the deployment of the main parachute pack. Attach this to the front node before placing the Forward Heat Shield.
 		//	============================================================================
 		//		ROC-ApolloEngineMountBDB
-		#rocApolloDrogueParachuteBDBTitle = Apollo Service Module Engine Mount
-		#rocApolloDrogueParachuteBDBDesc = The engine mount for the Apollo SM contains mounting points for the Apollo SPS, HGA, and other accessories.
+		#rocApolloEngineMountBDBTitle = Apollo Service Module Engine Mount
+		#rocApolloEngineMountBDBDesc = The engine mount for the Apollo SM contains mounting points for the Apollo SPS, HGA, and other accessories.
 		//	============================================================================
 		//		ROC-ApolloEVALightBDB
 		#rocApolloEVALightBDBTitle = Apollo EVA Spotlight
@@ -87,5 +88,16 @@ Localization
 		#ApolloSMB2BDBDesc = The Apollo Service Module contains the main propellant tanks, the fuel cells, life support and everything else that it is needed for a flight to the Moon.
 		#ApolloSMB2BDBBayToggle = Toggle SIM Bay Door
 		#ApolloSMB2BDBBayJettison = Jettison SIM Bay Door
+
+		//	============================================================================
+		//	BDB LEM
+		//	============================================================================
+		//		ROC-LEMAscentBDB
+		#LEMAscentBDBTitle = Apollo LM Ascent Stage
+		#LEMAscentBDBDesc = The ascent stage and crew compartment of the Apollo Lunar Module.
+		//	============================================================================
+		//		ROC-LEMDecouplerBDB
+		#LEMDecouplerBDBTitle = Apollo LM Decoupler
+		#LEMDecouplerBDBDesc = The explosive bolt interstage connector placed between the ascent and the descent modules of the Apollo Lunar Module.
 	}
 }
