--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloNoseconeBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloNoseconeBDB.cfg
@@ -28,7 +28,7 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 	
-	title = rocApolloNoseconeBDBTitle	//Apollo Block I Nosecone
+	title = #rocApolloNoseconeBDBTitle	//Apollo Block I Nosecone
 	manufacturer = #roMfrNAA	//North American Aviation
 	description = #rocApolloNoseconeBDBDesc	//Aerodynamic nosecone used on Apollo Block I, since docking missions weren't planned until Block II.
 	
