--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/TU_Support_ApolloBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/TU_Support_ApolloBDB.cfg
@@ -990,12 +990,16 @@ KSP_MODEL_SHADER
 	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_EVAFloodlight
 	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_ProbeDockingPort
 	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_ConeDockingPort
+	model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_Block2_SPS
 
 	MATERIAL
 	{
 		shader = TU/Metallic
 
 		excludeMesh = DepthMask
+		excludeMesh = innerGlow
+		excludeMesh = innerGlow 1
+
 
 		PROPERTY
 		{
