--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
@@ -320,7 +320,7 @@ PART
 	manufacturer = #roMfrNARockwell //North American Rockwell
 	description = #rocApolloCMBDBDesc //The Command Module of the Apollo spacecraft. Apollo was the spacecraft that transported humans to the Moon in the 1960's and 1970's. It has room for three crew.
 	
-	mass = 3.77424		//3940.77 kg - 184.84 kg (Ablator) - 8.95 kg (RCS Tanks) - 30.80 kg (Battery) + 70.06 kg (Water, LiOH. Food included in Inert mass) - 12 kg (trim) = 3774.24 kg
+	mass = 3.77824		//3940.77 kg - 184.84 kg (Ablator) - 8.95 kg (RCS Tanks) - 30.80 kg (Battery) + 70.06 kg (Water, LiOH. Food included in Inert mass) - 8 kg (Habitat Atmosphere) = 3778.24 kg
 	CoMOffset = 0.0, -0.54, 0.0		//CoG position from base = diameter / 0.270 = 1.05 m
 	
 	category = Pods
@@ -663,7 +663,7 @@ PART
 		name = ModuleFuelTanks
 		type = SM-IV
 		volume = 314.55
-		basemass = 3.77424
+		basemass = 3.77824
 
 		//	Three batteries ~3.36 kWh (28 V @ 40 Ah each).
 		//	Support the Command Module for the duration of it's free
