Added TU Support for the LEM including recoloring options

--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
@@ -294,7 +294,7 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/BDB/Apollo/bluedog_LM_Ascent_Cockpit
+		model = ROCapsules/Assets/BDB/Apollo/LM_AscentStage
 	}
 
 	INTERNAL
@@ -534,35 +534,35 @@ PART
 	//	Animations and Textures
 	//	============================================================================
 
-	MODULE
-	{
-		name = ModuleB9PartSwitch
-		moduleID = meshSwitchFoil
-		switcherDescription = Foil
-		switcherDescriptionPlural = Foils
-		affectDragCubes = True
-		affectFARVoxels = True
-		SUBTYPE
-		{
-			name = Gold
-		}
-		SUBTYPE
-		{
-			name = Silver
-			TEXTURE
-			{
-				texture = ROCapsules/Assets/BDB/Apollo/Paint/Silver/bluedog_LM_Descent_Silver
-				currentTexture = bluedog_LM_Descent
-			}
-			TEXTURE
-			{
-				shaderProperty = _SpecMap
-				texture = ROCapsules/Assets/BDB/Apollo/Paint/Silver/bluedog_LM_Descent_Silver_Spec
-				currentTexture = bluedog_LM_Descent_Spec
-			}
+	// MODULE
+	// {
+		// name = ModuleB9PartSwitch
+		// moduleID = meshSwitchFoil
+		// switcherDescription = Foil
+		// switcherDescriptionPlural = Foils
+		// affectDragCubes = True
+		// affectFARVoxels = True
+		// SUBTYPE
+		// {
+			// name = Gold
+		// }
+		// SUBTYPE
+		// {
+			// name = Silver
+			// TEXTURE
+			// {
+				// texture = ROCapsules/Assets/BDB/Apollo/Paint/Silver/bluedog_LM_Descent_Silver
+				// currentTexture = bluedog_LM_Descent
+			// }
+			// TEXTURE
+			// {
+				// shaderProperty = _SpecMap
+				// texture = ROCapsules/Assets/BDB/Apollo/Paint/Silver/bluedog_LM_Descent_Silver_Spec
+				// currentTexture = bluedog_LM_Descent_Spec
+			// }
 			
-		}
-	}
+		// }
+	// }
 
 	EFFECTS
 	{
