--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMLegsBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMLegsBDB.cfg
@@ -40,9 +40,9 @@ PART
 	entryCost = 1
 	category = Coupling
 	subcategory = 0
-	title = Apollo LM Decoupler
+	title = Apollo LM Legs
 	manufacturer = #roMfrGrumman
-	description = The explosive bolt interstage connector placed between the ascent and the descent modules of the Apollo Lunar Module.
+	description = A sturdy retracting landing leg, perfect for landing on other bodies. This part has multiple options to choose the design of the legs.
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, ascent, decoupler
 
 	//	============================================================================
