--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/TU_Support_ApolloBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/TU_Support_ApolloBDB.cfg
@@ -553,7 +553,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 		mesh = colorswitch
         shader = TU/Metallic
         texture = _MainTex, ROCapsules/Assets/BDB/Apollo/Paint/White/bluedog_Apollo_CM_White
-        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_NRM
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
         texture = _Emissive, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Emit
 		texture = _MetallicGlossMap, ROCapsules/Assets/BDB/Apollo/TU/bluedog_Apollo_CM_TU
 		keyword = TU_STOCK_SPEC
@@ -647,7 +647,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 		mesh = colorswitch
         shader = TU/Metallic
         texture = _MainTex, ROCapsules/Assets/BDB/Apollo/Apollo_CM_Boilerplate
-        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_NRM
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
         texture = _Emissive, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Emit
 		texture = _MetallicGlossMap, ROCapsules/Assets/BDB/Apollo/TU/bluedog_Apollo_CM_TU
 		keyword = TU_STOCK_SPEC
@@ -737,7 +737,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 		mesh = colorswitch
         shader = TU/Metallic
         texture = _MainTex, ROCapsules/Assets/BDB/Apollo/Apollo_CM_BP-DIFF
-        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_NRM
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
         texture = _Emissive, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Emit
 		texture = _MetallicGlossMap, ROCapsules/Assets/BDB/Apollo/TU/bluedog_Apollo_CM_TU
 		texture = _MaskTex, ROCapsules/Assets/BDB/Apollo/Apollo_CM_BP-MASK
@@ -811,6 +811,196 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
     }
 }
 
+//	============================================================================
+//	BDB Apollo - Skylab (Clean)
+//	============================================================================
+
+KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
+{
+	name = BDB-Apollo-Skylab-Clean
+	recolorable = false
+
+	MATERIAL
+	{
+		mesh = Base
+		mesh = colorswitch_skylab
+		mesh = skylabMat
+        shader = TU/Metallic
+        texture = _MainTex, ROCapsules/Assets/BDB/Apollo/Paint/White/bluedog_Apollo_CM_White
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
+        texture = _Emissive, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Emit
+		texture = _MetallicGlossMap, ROCapsules/Assets/BDB/Apollo/TU/bluedog_Apollo_CM_TU
+		keyword = TU_STOCK_SPEC
+		
+		PROPERTY
+		{
+			name = _Color
+			color = 2.0, 2.0, 2.0
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.8
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.8
+		}
+	}
+	
+	MATERIAL
+	{
+		mesh = ParachuteMount
+        shader = TU/Metallic
+        texture = _MainTex, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_ParachuteBay
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_ParachuteBay_NRM
+		texture = _MetallicGlossMap, ROCapsules/Assets/Textures/Smooth-METAL
+		keyword = TU_STOCK_SPEC
+		
+		PROPERTY
+		{
+			name = _Color
+			color = 1.5, 1.5, 1.5
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.8
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.55
+		}
+	}
+	
+	MATERIAL
+	{
+		mesh = Windows
+        shader = TU/Metallic
+        texture = _MainTex, ROCapsules/Assets/BDB/Apollo/Apollo_CM-DIFF
+        texture = _BumpMap, RROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_NRM
+        texture = _Emissive, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Emit
+		texture = _MetallicGlossMap, ROCapsules/Assets/BDB/Apollo/TU/bluedog_Apollo_CM_TU
+		keyword = TU_STOCK_SPEC
+		
+		PROPERTY
+		{
+			name = _Color
+			// Higher numbers are lighter
+			color = 1.5, 1.5, 1.5
+		}
+		PROPERTY
+		{
+			name = _Metal
+			// 0 = not metallic, 1 = mirror finish
+			float = 0.8
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			// 0 = most blurry, 1 = not blurry
+			float = 0.8
+		}
+	}
+}
+
+//	============================================================================
+//	BDB Apollo - Skylab (Toasted)
+//	============================================================================
+
+KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
+{
+	name = BDB-Apollo-Skylab-Toasted
+	recolorable = false
+
+	MATERIAL
+	{
+		mesh = Base
+		mesh = colorswitch_skylab
+		mesh = skylabMat
+        shader = TU/Metallic
+        texture = _MainTex, ROCapsules/Assets/BDB/Apollo/Paint/Skylab/bluedog_Apollo_CM_Skylab
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Painted_NRM
+        texture = _Emissive, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Emit
+		texture = _MetallicGlossMap, ROCapsules/Assets/BDB/Apollo/TU/bluedog_Apollo_CM_TU
+		keyword = TU_STOCK_SPEC
+		
+		PROPERTY
+		{
+			name = _Color
+			color = 2.0, 2.0, 2.0
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.8
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.8
+		}
+	}
+	
+	MATERIAL
+	{
+		mesh = ParachuteMount
+        shader = TU/Metallic
+        texture = _MainTex, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_ParachuteBay
+        texture = _BumpMap, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_ParachuteBay_NRM
+		texture = _MetallicGlossMap, ROCapsules/Assets/Textures/Smooth-METAL
+		keyword = TU_STOCK_SPEC
+		
+		PROPERTY
+		{
+			name = _Color
+			color = 1.5, 1.5, 1.5
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.8
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.55
+		}
+	}
+	
+	MATERIAL
+	{
+		mesh = Windows
+        shader = TU/Metallic
+        texture = _MainTex, ROCapsules/Assets/BDB/Apollo/Apollo_CM-DIFF
+        texture = _BumpMap, RROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_NRM
+        texture = _Emissive, ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_CM_Emit
+		texture = _MetallicGlossMap, ROCapsules/Assets/BDB/Apollo/TU/bluedog_Apollo_CM_TU
+		keyword = TU_STOCK_SPEC
+		
+		PROPERTY
+		{
+			name = _Color
+			// Higher numbers are lighter
+			color = 1.5, 1.5, 1.5
+		}
+		PROPERTY
+		{
+			name = _Metal
+			// 0 = not metallic, 1 = mirror finish
+			float = 0.8
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			// 0 = most blurry, 1 = not blurry
+			float = 0.8
+		}
+	}
+}
+
 
 
 
@@ -835,6 +1025,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 			
 			GAMEOBJECTS
 			{
+				colorswitch = true
 				colorswitch_bp = false
 				colorswitch_skylab = false
 				Painted = false
@@ -853,6 +1044,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 			
 			GAMEOBJECTS
 			{
+				colorswitch = true
 				colorswitch_bp = false
 				colorswitch_skylab = false
 				Painted = false
@@ -871,6 +1063,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 			
 			GAMEOBJECTS
 			{
+				colorswitch = true
 				colorswitch_bp = false
 				colorswitch_skylab = false
 				Painted = false
@@ -889,6 +1082,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 			
 			GAMEOBJECTS
 			{
+				colorswitch = true
 				colorswitch_bp = false
 				colorswitch_skylab = false
 				Painted = false
@@ -907,6 +1101,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 			
 			GAMEOBJECTS
 			{
+				colorswitch = true
 				colorswitch_bp = false
 				colorswitch_skylab = false
 				Painted = false
@@ -925,6 +1120,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 			
 			GAMEOBJECTS
 			{
+				colorswitch = true
 				colorswitch_bp = false
 				colorswitch_skylab = false
 				Painted = false
@@ -943,6 +1139,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 			
 			GAMEOBJECTS
 			{
+				colorswitch = true
 				colorswitch_bp = false
 				colorswitch_skylab = false
 				Painted = false
@@ -961,9 +1158,48 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 			
 			GAMEOBJECTS
 			{
+				colorswitch = true
 				colorswitch_bp = false
 				colorswitch_skylab = false
 				Painted = false
+			}
+		}
+		
+		VARIANT
+		{
+			name = Skylab-Clean
+			themeName = Historic
+			displayName = Skylab (Clean)
+			primaryColor = #FFFFFF
+			secondaryColor = #2C2E2C
+			
+			EXTRA_INFO { textureSet = BDB-Apollo-Skylab-Clean }
+			
+			GAMEOBJECTS
+			{
+				colorswitch_bp = false
+				colorswitch_skylab = true
+				Painted = true
+				colorswitch = false
+			}
+		}
+		
+		VARIANT
+		{
+			name = Skylab-Toasted
+			themeName = Historic
+			displayName = Skylab (Toasted)
+			primaryColor = #FFFF99
+			secondaryColor = #2C2E2C
+			
+			EXTRA_INFO { textureSet = BDB-Apollo-Skylab-Toasted }
+			
+			GAMEOBJECTS
+			{
+				colorswitch_bp = false
+				colorswitch_skylab = true
+				Painted = false
+				colorswitch = false
 			}
 		}
 	}
