LM ascent stage
Final mass and fuel load adjustments for Apollo LM Ascent Stage

--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
@@ -270,9 +270,9 @@ PART
 	//	================================================================================
 	//Tank Mass Compensation
 	//	================================================================================
-	//	CM Propellant Tank (SM-III): 8.95 kg
-	//	CM LS Tank (SM-III): 33.8 kg
-	//	CM Batteries (SM-III): 30.80 kg
+	//	CM Propellant Tank (SM-IV): 8.95 kg
+	//	CM LS Tank (SM-IV): 33.8 kg
+	//	CM Batteries (SM-IV): 30.80 kg
 
 	//	============================================================================
 	//	Model and Dimensions
