--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
@@ -287,6 +287,42 @@ PART
 	//	================================================================================
 	//INERT MASS: 4448.1 lbs (2017.62 kg)
 
+	//	================================================================================
+	//Ultimate Part Resource Assignments:
+	//	================================================================================
+	//LM Ascent Module:
+	//	APS Propellant: 2130.00 L
+	//		AZ50: 985.8 L
+	//		NTO: 979.2 L
+	//		Helium: 33000 L (/200)
+	//	RCS Propellant: 218.46 L
+	//		AZ50: 84.4 L
+	//		NTO: 107.4 L
+	//		Helium: 5333 L (/200)
+	//	LM Ascent LS: 132.85 L
+	//		Water (Cooling): 11.16 L
+	//		Water (Crew): 40.82 L
+	//		Oxygen: 1544 L (/200)
+	//		Food: 35.1 L (this isn't actually specified, presumably included under supplies. Just use what we had before)
+	//		LiOH: 5.65 L
+	//		Waste: 3.2 L
+	//		WasteWater: 29.2 L
+	//	LM Ascent EC: 59675 EC (1,000 EC/L)
+	//		EC: 59.675 L
+	//	LM Excess: 200 L (???)
+	//	LS Resources Mass (including food): 72.27 kg
+	//	LS Resources Mass (excluding food): 62.41 kg
+	//TOTAL TANK SIZE (NO LS): 2608.135 L
+	//TOTAL TANK SIZE (LS): 2740.985 L
+
+	//	================================================================================
+	//Tank Mass Compensation
+	//	================================================================================
+	//	LM Ascent APS Tank (SM-IV): 204.5 kg
+	//	LM Ascent RCS Tank (SM-IV): 20.97 kg
+	//	LM Ascent LS Tank (SM-IV): 12.75 kg
+	//	LM Ascent Batteries (SM-IV): 85.95 kg
+
 
 	//	============================================================================
 	//	Model and Dimensions
@@ -335,7 +371,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 1.86399
+	mass = 1.63159		//1863.99 kg - 85.95 kg (batteries) - 204.5 kg (APS tank) - 20.97 kg (RCS tank) + 12.75 kg (LS tank) + 72.27 kg (LS resources) - 6 kg (Habitat Atmosphere) = 1631.59 kg
 	crashTolerance = 8
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
@@ -391,22 +427,24 @@ PART
 		thrusterPower = 0.445
 		runningEffectName = control
 
-		// MR 1.94:1 (from ox/fuel mass; stated MR is 2.05:1)
+		// MR 2.05:1
 		PROPELLANT
 		{
 			name = Aerozine50
-			ratio = 0.4537
+			ratio = 0.4401
 		}
+
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.5463
+			ratio = 0.5599
 		}
+
 		PROPELLANT
 		{
 			name = Helium
 			ratio = 10.0
-			ignoreForIsp = true
+			ignoreForIsp = True
 		}
 		atmosphereCurve
 		{
@@ -468,15 +506,15 @@ PART
 	{
 		name = ModuleConnectedLivingSpace
 		passable = true
-		impassablenodes = bottom
+		//impassablenodes = bottom
 	}
 
 	MODULE
 	{
 		name = ModuleFuelTanks
-		type = ServiceModule
-		volume = 2463.7
-		basemass = -1
+		type = SM-IV
+		volume = 2608.135
+		basemass = 1.63159
 
 		//	Two batteries ~16.6 kWh (28 V @ 296 Ah each).
 
@@ -487,28 +525,25 @@ PART
 			maxAmount = 59675
 		}
 
-		// LMAE propellant load ~2378 kg (source https://georgetyson.com/files/apollostatistics.pdf)
-		// RCS propellant load ~287 kg (wikipedia)
-
 		TANK
 		{
-			// 108.468L RCS + 1016.164L main
+			// 84.4L RCS + 985.8L main
 			name = Aerozine50
-			amount = 1124.6
-			maxAmount = 1124.6
+			amount = 1070.2
+			maxAmount = 1070.2
 		}
 		TANK
 		{
-			// 130.606 RCS + 1009.2775L main
+			// 107.4L RCS + 979.2L main
 			name = NTO
-			amount = 1139.9
-			maxAmount = 1139.9
+			amount = 1086.6
+			maxAmount = 1086.6
 		}
 		TANK
 		{
 			name = Helium
-			amount = 27828.3
-			maxAmount = 27828.3
+			amount = 38333
+			maxAmount = 38333
 		}
 	}
 
@@ -672,11 +707,12 @@ PART
 {
 	@description ^= :$: Supports a crew of two for up to 3 days of active operations.
 
-	@mass -= 0.04
+	@mass -= 0.8502		//-72.27 kg (LS Resources) - 12.75 kg (LS Tanks)
 
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume += 165
+		@volume += 132.85
+		@basemass -= 0.8502
 
 		TANK
 		{
@@ -685,29 +721,25 @@ PART
 			maxAmount = 35.1
 		}
 
-		//	Two water tanks with a capacity of ~20 kg each.
-
 		TANK
 		{
 			name = Water
-			amount = 40
-			maxAmount = 40
+			amount = 40.82
+			maxAmount = 40.82
 		}
-
-		//	Two oxygen tanks with a capacity of ~1.1 kg each.
 
 		TANK
 		{
 			name = Oxygen
-			amount = 1563.4
-			maxAmount = 1563.4
+			amount = 1544
+			maxAmount = 1544
 		}
 
 		TANK
 		{
 			name = LithiumHydroxide
-			amount = 4.1
-			maxAmount = 6.2
+			amount = 5.65
+			maxAmount = 5.65
 		}
 
 		TANK
@@ -1033,6 +1065,29 @@ PART
 
 @PART[ROC-LEMAscentBDB]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
 {
+	//Subtract 44 kg for 28 dbm and 34 dbm TL 5 radios
+	//In reality, multiple radios shared both antennas
+	@mass -= 0.044
+
+	@MODULE[ModuleFuelTanks]
+	{
+		@basemass -= 0.044
+	}
+
+	!MODULE[ModuleDataTransmitter],* {}
+
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 3.0		//Omni based on steerable antenna in low gain mode. RF output 2.8 watts (~28 dbm)
+		RFBand = S		//Default to S-band
+	}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		antennaDiameter = 1.8		//Antenna diameter based on combined area of 4 dishes. RF output 11.2 watts (~34 dbm)
+		RFBand = S		//Default to S-band
+	}
 	!MODULE[ModuleDataTransmitter],* {}
 	MODULE
 	{
