LM descent stage

--- a/GameData/ROCapsules/Localization/en-us.cfg
+++ b/GameData/ROCapsules/Localization/en-us.cfg
@@ -93,11 +93,23 @@ Localization
 		//	BDB LEM
 		//	============================================================================
 		//		ROC-LEMAscentBDB
-		#LEMAscentBDBTitle = Apollo LM Ascent Stage
-		#LEMAscentBDBDesc = The ascent stage and crew compartment of the Apollo Lunar Module.
+		#rocLEMAscentBDBTitle = Apollo LM Ascent Stage
+		#rocLEMAscentBDBDesc = The ascent stage and crew compartment of the Apollo Lunar Module.
 		//	============================================================================
 		//		ROC-LEMDecouplerBDB
-		#LEMDecouplerBDBTitle = Apollo LM Decoupler
-		#LEMDecouplerBDBDesc = The explosive bolt interstage connector placed between the ascent and the descent modules of the Apollo Lunar Module.
+		#rocLEMDecouplerBDBTitle = Apollo LM Decoupler
+		#rocLEMDecouplerBDBDesc = The explosive bolt interstage connector placed between the ascent and the descent modules of the Apollo Lunar Module.
+		//	============================================================================
+		//		ROC-LEMDescentBDB
+		#rocLEMDescentBDBTitle = Apollo LM Descent Stage
+		#rocLEMDescentBDBDesc = The Apollo Lunar Module descent stage. Equipped with storage boxes for storing equipment.
+		//	============================================================================
+		//		ROC-LEMLegsBDB
+		#rocLEMLegsBDBTitle = Apollo LM Legs
+		#rocLEMLegsBDBDesc = A sturdy retracting landing leg, perfect for landing on other bodies. This part has multiple options to choose the design of the legs.
+		//	============================================================================
+		//		ROC-LEMMESABDB
+		#rocLEMMESABDBTitle = Apollo LM Material Experiment Stowage Assembly
+		#rocLEMMESABDBDesc = Storage bay, containing astronaut EVA equipment, and cameras to record the first steps onto the moon. Place to the left of the LM ladder.
 	}
 }
