--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
@@ -178,7 +178,7 @@ PART
 	//	Propulsion: 294.8 lbs
 	//	Power: 1413.7 lbs
 	//	Avionics: 933.8 lbs
-	//	Enviromental: 1749.9 lbs
+	//	Environmental: 1749.9 lbs
 	//	Other: 1292 lbs
 
 	//	================================================================================
