--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
@@ -229,27 +229,27 @@ PART
 	//	Propulsion: 711.4 lbs
 	//	Power: 734.8 lbs
 	//	Avionics: 399.2 lbs
-	//	Enviromental: 662.5 lbs
+	//	Environmental: 662.5 lbs
 	//	Other: 274.1 lbs
 
 	//	================================================================================
 	//Apollo Lunar Ascent Module Inert Mass Breakdowns:
 	//	================================================================================
-	//LEM Ascent Module: 276.2 lbs
-	//	Non-Cargo: 276.2 lbs
-	//		Trapped APS: 14.2 lbs
+	//LEM Ascent Module: 121.7 lbs
+	//	Non-Cargo: 121.7 lbs
+	//		Trapped APS: 14.2 lbs (not incl., RF already calculates residuals, move to wet mass)
 	//		Unused APS Prop: 47.4 lbs (not incl., move to wet mass)
-	//		Disp & Malfunction: 140.3 lbs
+	//		Disp & Malfunction Prop: 140.3 lbs (not incl., move to wet mass)
 	//		Unusable Propellant - Main: 49.9 lbs (not incl., RF already calculates residuals, move to wet mass)
 	//		Unusable Propellant - RCS: 121.7 lbs
-	//INERT MASS: 276.2 lbs
+	//INERT MASS: 121.7 lbs
 
-	//TOTAL INERT MASS: 4448.1 lbs (4940.5 lbs all included)
+	//TOTAL INERT MASS: 4293.6 lbs (4940.5 lbs all included)
 
 	//	================================================================================
 	//Apollo Lunar Ascent Module Wet Mass Breakdowns:
 	//	================================================================================
-	//LEM Ascent Module: 6122.5 lbs
+	//LEM Ascent Module: 6277.0 lbs
 	//	Non-Propellant: 530.8 lbs
 	//		Total Coolant: 24.6 lbs
 	//		Tanked GOX: 4.8 lbs
@@ -260,9 +260,11 @@ PART
 	//		Helium-Ascent-RCS: 2.1 lbs
 	//		LiOH Cartridge: 18.2 lbs
 	//		Crew Provisions: 376.9 lbs (includes food, along with scientific equipment?)
-	//	Propellant: 5591.7 lbs
+	//	Propellant: 5746.2 lbs
 	//		Propellant: 4984.9 lbs
+	//		+Trapped APS: 14.2 lbs
 	//		+Unused APS Prop: 47.4 lbs
+	//		+Disp & Malfunction Prop: 140.3 lbs
 	//		+Unusable Propellant - Main: 49.9 lbs
 	//		RCS Propellant: 509.5 lbs
 
@@ -281,19 +283,19 @@ PART
 	//	LEM Decoupler: 63.8 lbs (28.94 kg)
 	//		Dry Mass: 63.8 lbs
 	//	================================================================================
-	//	LEM Ascent Module: 4109.4 lbs (1863.99 kg)
+	//	LEM Ascent Module: 3955.2 lbs (1794.05 kg)
 	//		Dry Mass: 3833.5 lbs
-	//		Inert Mass: 276.2 lbs
+	//		Inert Mass: 121.7 lbs
 	//	================================================================================
-	//INERT MASS: 4448.1 lbs (2017.62 kg)
+	//INERT MASS: 4293.6 lbs (1947.54 kg)
 
 	//	================================================================================
 	//Ultimate Part Resource Assignments:
 	//	================================================================================
 	//LM Ascent Module:
-	//	APS Propellant: 2130.00 L
-	//		AZ50: 985.8 L
-	//		NTO: 979.2 L
+	//	APS Propellant: 2384.80 L
+	//		AZ50: 1113.7 L
+	//		NTO: 1106.1 L
 	//		Helium: 33000 L (/200)
 	//	RCS Propellant: 218.46 L
 	//		AZ50: 84.4 L
@@ -312,13 +314,13 @@ PART
 	//	LM Excess: 200 L (???)
 	//	LS Resources Mass (including food): 72.27 kg
 	//	LS Resources Mass (excluding food): 62.41 kg
-	//TOTAL TANK SIZE (NO LS): 2608.135 L
-	//TOTAL TANK SIZE (LS): 2740.985 L
+	//TOTAL TANK SIZE (NO LS): 2662.935 L
+	//TOTAL TANK SIZE (LS): 2862.935 L
 
 	//	================================================================================
 	//Tank Mass Compensation
 	//	================================================================================
-	//	LM Ascent APS Tank (SM-IV): 204.5 kg
+	//	LM Ascent APS Tank (SM-IV): 226.4 kg
 	//	LM Ascent RCS Tank (SM-IV): 20.97 kg
 	//	LM Ascent LS Tank (SM-IV): 12.75 kg
 	//	LM Ascent Batteries (SM-IV): 85.95 kg
@@ -357,13 +359,13 @@ PART
 	entryCost = 1
 	category = Pods
 	subcategory = 0
-	title = #LEMAscentBDBTitle	//Apollo LM Ascent Stage
+	title = #rocLEMAscentBDBTitle	//Apollo LM Ascent Stage
 	manufacturer = #roMfrGrumman
-	description = #LEMAscentBDBDesc	//The ascent stage and crew compartment of the Apollo Lunar Module.
+	description = #rocLEMAscentBDBDesc	//The ascent stage and crew compartment of the Apollo Lunar Module.
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, ascent
 
 	vesselType = Lander
-	stagingIcon = LIQUID_ENGINE
+	stagingIcon = RCS_MODULE
 	CrewCapacity = 2
 	bulkheadProfiles = size1, size2
 
@@ -371,7 +373,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 1.63159		//1863.99 kg - 85.95 kg (batteries) - 204.5 kg (APS tank) - 20.97 kg (RCS tank) + 12.75 kg (LS tank) + 72.27 kg (LS resources) - 6 kg (Habitat Atmosphere) = 1631.59 kg
+	mass = 1.53975		//1794.05 kg - 85.95 kg (batteries) - 226.4 kg (APS tank) - 20.97 kg (RCS tank) + 12.75 kg (LS tank) + 72.27 kg (LS resources) - 6 kg (Habitat Atmosphere) = 1539.75 kg
 	crashTolerance = 8
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
@@ -513,8 +515,8 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = SM-IV
-		volume = 2608.135
-		basemass = 1.63159
+		volume = 2662.935
+		basemass = 1.53975
 
 		//	Two batteries ~16.6 kWh (28 V @ 296 Ah each).
 
@@ -1074,20 +1076,6 @@ PART
 		@basemass -= 0.044
 	}
 
-	!MODULE[ModuleDataTransmitter],* {}
-
-	MODULE
-	{
-		name = ModuleRealAntenna
-		referenceGain = 3.0		//Omni based on steerable antenna in low gain mode. RF output 2.8 watts (~28 dbm)
-		RFBand = S		//Default to S-band
-	}
-	MODULE
-	{
-		name = ModuleRealAntenna
-		antennaDiameter = 1.8		//Antenna diameter based on combined area of 4 dishes. RF output 11.2 watts (~34 dbm)
-		RFBand = S		//Default to S-band
-	}
 	!MODULE[ModuleDataTransmitter],* {}
 	MODULE
 	{
