--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMLegsBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMLegsBDB.cfg
@@ -40,16 +40,16 @@ PART
 	entryCost = 1
 	category = Coupling
 	subcategory = 0
-	title = Apollo LM Legs
+	title = #rocLEMLegsBDBTitle	// LM Legs
 	manufacturer = #roMfrGrumman
-	description = A sturdy retracting landing leg, perfect for landing on other bodies. This part has multiple options to choose the design of the legs.
+	description = #rocLEMLegsBDBDesc	// A sturdy retracting landing leg, perfect for landing on other bodies. This part has multiple options to choose the design of the legs.
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, ascent, decoupler
 
 	//	============================================================================
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 0.015
+	mass = 0.05670
 	crashTolerance = 12
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
