--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMMESABDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMMESABDB.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-LEMDecouplerBDB
+	name = ROC-LEMMESABDB
 	module = Part
 	author = CobaltWolf, capkirk123
 
@@ -12,14 +12,13 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/BDB/Apollo/bluedog_LM_Descent_Separator
+		model = ROCapsules/Assets/BDB/Apollo/bluedog_LM_MESA
 	}
 
 	scale = 1.0
 	rescaleFactor = 1.5646
 
-	node_stack_top = 0.0, 0.01186761, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 2
+	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1
 
 	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
@@ -33,19 +32,16 @@ PART
 	entryCost = 1
 	category = Coupling
 	subcategory = 0
-	title = #rocLEMDecouplerBDBTitle	//Apollo LM Decoupler
+	title = #rocLEMMESABDBTitle	//Apollo LM Material Experiment Stowage Assembly
 	manufacturer = #roMfrGrumman
-	description = #rocLEMDecouplerBDBDesc	//The explosive bolt interstage connector placed between the ascent and the descent modules of the Apollo Lunar Module.
-	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, module, ascent, decoupler
-
-	stagingIcon = DECOUPLER_HOR
-	bulkheadProfiles = size2
+	description = #rocLEMMESABDBDesc	//Storage bay, containing astronaut EVA equipment, and cameras to record the first steps onto the moon. Place to the left of the LM ladder.
+	tags = bay experiment lab material research LM LEM LMTEST lander science
 
 	//	============================================================================
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 0.02894
+	mass = 0.08623
 	crashTolerance = 12
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
@@ -64,8 +60,49 @@ PART
 
 	MODULE
 	{
-		name = ModuleDecouple
-		ejectionForce = 0
-		explosiveNodeID = top
+		name = ModuleAnimateGeneric
+		animationName = deploy
+		isOneShot = true
+		startEventGUIName = Deploy MESA
+		endEventGUIName = Retract MESA
+		actionGUIName = Toggle MESA
+		allowAnimationWhileShielded = False
+	}
+
+	MODULE
+	{
+		name = ModuleDepthMask
+		maskTransform = depthMask
+		//bodyTransform = interior //Optional
+	}
+
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitchFoil
+		switcherDescription = Foil
+		switcherDescriptionPlural = Foils
+		affectDragCubes = True
+		affectFARVoxels = True
+		SUBTYPE
+		{
+			name = Gold
+		}
+		SUBTYPE
+		{
+			name = Silver
+			TEXTURE
+			{
+				texture = ROCapsules/Assets/BDB/Apollo/Paint/Silver/bluedog_LM_Descent_Silver
+				currentTexture = bluedog_LM_Descent
+			}
+			TEXTURE
+			{
+				shaderProperty = _SpecMap
+				texture = ROCapsules/Assets/BDB/Apollo/Paint/Silver/bluedog_LM_Descent_Silver_Spec
+				currentTexture = bluedog_LM_Descent_Spec
+			}
+			
+		}
 	}
 }
